--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "rbush": "^4.0.0",
     "react": "^18",
     "react-dom": "^18",
+    "robust-point-in-polygon": "^1.0.3",
     "three": "^0.166.1",
     "topojson-client": "^3.1.0",
     "world-atlas": "^2.0.2"
@@ -33,6 +34,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/robust-point-in-polygon": "^1.0.4",
     "@types/topojson-client": "^3.1.4",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
