Getting Data from World Bank

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/d3-geo": "^3.1.0",
     "@types/rbush": "^3.0.3",
     "@types/three": "^0.166.0",
+    "axios": "^1.7.3",
     "cors": "^2.8.5",
     "d3": "^7.9.0",
     "d3-geo": "^3.1.1",
