--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "d3": "^7.9.0",
     "d3-geo": "^3.1.1",
+    "geo-three": "^0.1.14",
     "i18n-iso-countries": "^7.11.3",
     "next": "14.2.5",
     "rbush": "^4.0.0",
@@ -39,8 +40,11 @@
     "@types/topojson-client": "^3.1.4",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
+    "gh-pages": "^6.1.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
+
+  
 }
