Compressed textures and updated globe to uncompress them.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-three/fiber": "^8.16.8",
     "@turf/turf": "^7.0.0",
     "@types/d3-geo": "^3.1.0",
+    "@types/pako": "^2.0.3",
     "@types/rbush": "^3.0.3",
     "@types/three": "^0.166.0",
     "axios": "^1.7.3",
@@ -22,10 +23,12 @@
     "geo-three": "^0.1.14",
     "i18n-iso-countries": "^7.11.3",
     "next": "14.2.5",
+    "pako": "^2.1.0",
     "rbush": "^4.0.0",
     "react": "^18",
     "react-dom": "^18",
     "robust-point-in-polygon": "^1.0.3",
+    "sharp": "^0.33.4",
     "three": "^0.166.1",
     "topojson-client": "^3.1.0",
     "world-atlas": "^2.0.2"
@@ -45,6 +48,4 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
-
-  
 }
